syntax = "proto3";

package stats;

option go_package = "stats";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message Stats {
  // The sum of all wall time spent in the querier to execute the query.
  google.protobuf.Duration wall_time = 1 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  // The number of series fetched for the query
  uint64 fetched_series_count = 2;
  // The number of bytes of the chunks fetched for the query
  uint64 fetched_chunk_bytes = 3;
  // The number of bytes of data fetched for the query
  uint64 fetched_data_bytes = 4;
  // Extra fields to be reported on the stats log
  map<string, string> extra_fields = 5;
}
